[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctscan"
version = "0.1.0"
description = "Personal CLI for scanning Certificate Transparency logs"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "cryptography>=42.0",
    "dnspython>=2.4",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
ctscan = "ctscan.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ctscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
